# solana-r0-prover

./: Cargo.toml  LICENSE  README.md  proof_package.json
host/: Cargo.toml
host/src/: database.rs  main.rs
lib/: Cargo.toml
lib/src/: core.rs  lib.rs
methods/guest/: Cargo.toml
methods/guest/.cargo/: config.toml
methods/guest/src/: esr_verification.rs  main.rs
