[package]
name = "twine-solana-r0-prover-host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "proof_generator"
path = "src/bin/proof_generator.rs"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "^3.0.3" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Database
deadpool-postgres = "0.13"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
# Add compression support
flate2 = "1.0"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Time
chrono = "0.4"

# Solana dependencies
solana-sdk = "2.2.1"
solana-lattice-hash = "2.2.1"
bs58 = "0.5"
ed25519-dalek = "2.1"
sha2 = "0.10"
blake3 = "1.5"

# Local dependencies (default features = non-zkvm)
twine-solana-r0-prover-lib = { path = "../lib", default-features = true }