[package]
name = "twine-solana-r0-prover-lib"
version = "1.0.0"
edition = "2021"

[features]
default = ["sha2"]
zkvm = ["sha2-risczero", "risc0-zkvm", "hashbrown"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.11", features = ["base64"] }
hex = "0.4"
solana-lattice-hash = "2.2.1"

# Collections for zkvm
hashbrown = { version = "0.14", features = ["serde"], optional = true }

# Conditional sha2 dependencies - cannot use both at once
sha2 = { version = "0.10", default-features = false, optional = true }
sha2-risczero = { package = "sha2", version = "0.10", optional = true }

# RISC Zero zkVM support
risc0-zkvm = { version = "^3.0.3", default-features = false, features = ['std'], optional = true }