[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "^3.0.3", default-features = false, features = ['std'] }

# Serialization
bincode = "1.3"
hex = "0.4"
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }

# Cryptographic libraries with RISC Zero precompiles
sha2 = "0.10"
blake3 = { version = "1.5", default-features = false }
tiny-keccak = { version = "2.0", features = ["keccak"] }
k256 = { version = "0.13", features = ["ecdsa"] }

# Solana dependencies  
solana-lattice-hash = "2.2.1"
ed25519-dalek = { version = "2.1", default-features = false, features = ["alloc", "batch", "hazmat"] }
curve25519-dalek = { version = "4.1", default-features = false, features = ["alloc", "precomputed-tables", "zeroize"] }

# Collections for no_std
hashbrown = "0.14"

# Local dependencies (use zkvm feature, disable default)
twine-solana-r0-prover-lib = { path = "../../lib", default-features = false, features = ["zkvm"] }
